--- a/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.html
+++ b/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.html
@@ -33,8 +33,8 @@
         </div>
     </div>
     <div class="buttonBox">
-      <button *ngIf="usluzniObjekt?.isFavorit==false && loginInfo().isLogiran" (click)="dodajFavorit()" class="favoritBtn">Dodaj u favorite</button>
-      <button *ngIf="usluzniObjekt?.isFavorit==true && loginInfo().isLogiran" (click)="ukloniFavorit()" class="favoritBtn">Ukloni iz favorita</button>
+      <button *ngIf="usluzniObjekt?.isFavorit==false && loginInfo().isLogiran && loginInfo().autentifikacijaToken?.korisnickiNalog?.isKorisnik" (click)="dodajFavorit()" class="favoritBtn">Dodaj u favorite</button>
+      <button *ngIf="usluzniObjekt?.isFavorit==true && loginInfo().isLogiran && loginInfo().autentifikacijaToken?.korisnickiNalog?.isKorisnik" (click)="ukloniFavorit()" class="favoritBtn">Ukloni iz favorita</button>
     </div>
 
     <div class="Cjenovnik">
@@ -140,10 +140,11 @@
         </div>
 
         <div class="rezervacijaBox">
-          <button *ngIf="loginInfo().isLogiran == true && usluzniObjekt?.isSmjestaj == false" class="buttonRezervisi" (click)="rezervisiTermin()">Rezerviši</button>
-          <button *ngIf="loginInfo().isLogiran == true && usluzniObjekt?.isSmjestaj == true" class="buttonRezervisi" (click)="rezervisiTerminSmjestaja()">Rezerviši</button>
+          <button *ngIf="loginInfo().isLogiran == true && usluzniObjekt?.isSmjestaj == false && loginInfo().autentifikacijaToken?.korisnickiNalog?.isKorisnik" class="buttonRezervisi" (click)="rezervisiTermin()">Rezerviši</button>
+          <button *ngIf="loginInfo().isLogiran == true && usluzniObjekt?.isSmjestaj == true && loginInfo().autentifikacijaToken?.korisnickiNalog?.isKorisnik" class="buttonRezervisi" (click)="rezervisiTerminSmjestaja()">Rezerviši</button>
           <p *ngIf="loginInfo().isLogiran == false" style="margin-bottom: 5px;">Morate biti prijavljeni kako bi ste izvršili rezervaciju.</p>
-          <button *ngIf="loginInfo().isLogiran == false" class="buttonRezervisi" (click)="prijava()">Prijava</button>
+          <p *ngIf="loginInfo().isLogiran == true && (loginInfo().autentifikacijaToken?.korisnickiNalog?.isManager || loginInfo().autentifikacijaToken?.korisnickiNalog?.isAdministrator)" style="margin-bottom: 5px;">Vaše permisije ne dozvoljavaju izvršavanje rezervacije. Prijavite se kao User/Korisnik da biste izvršili rezervaciju!</p>
+          <button *ngIf="loginInfo().isLogiran == false || (loginInfo().autentifikacijaToken?.korisnickiNalog?.isManager || loginInfo().autentifikacijaToken?.korisnickiNalog?.isAdministrator)" class="buttonRezervisi" (click)="prijava()">Prijava</button>
         </div>
       </div>
 
