--- a/angularApp/src/app/edit-kategorije/edit-kategorije.component.css
+++ b/angularApp/src/app/edit-kategorije/edit-kategorije.component.css
@@ -1,3 +1,54 @@
+.settingsContainer2 {
+  background-color: #776b5d;
+  width: 90%;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  margin-top: 100px;
+}
+
+.accountInput2 {
+  border: none;
+  padding: 5px;
+  width: 100%;
+  color: black;
+  border-radius: 5px;
+  font-size: 1rem;
+  background-color: #ebe3d5;
+}
+
+.savecancel {
+  background-color: #ebe3d5;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  color: black;
+  cursor: pointer;
+  margin-top: 20px;
+  padding: 5px;
+}
+
+.slikaISVG {
+  display: flex;
+  align-items: center;
+  width: 70%;
+  justify-content: space-between;
+}
+
+.uploadKontejner {
+  height: 75px;
+  width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ebe3d5;
+  border-radius: 5px;
+}
 * {
   margin: 0;
   padding: 0;
@@ -7,100 +58,6 @@
   font-family: "Nunito Sans", sans-serif;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
-}
-
-.relative-time {
-  color: white;
-  font-size: 0.5em;
-  margin-top: 5px;
-}
-
-.brojUDugmetu {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  background-color: red;
-  border-radius: 50%;
-  width: 18px;
-  height: 18px;
-  font-size: 12px;
-  line-height: 12px;
-}
-
-.contentCijeli{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.dugmici{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.containerGlavni {
-  width: 100%;
-  margin: 5px 0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.question {
-  width: 100%;
-  padding: 15px;
-  padding-left: 30px;
-  padding-right: 30px;
-  background-color: black;
-  cursor: pointer;
-  font-weight: bold;
-  position: relative;
-}
-
-.answer {
-  padding: 15px;
-  background-color: black;
-  margin-bottom: 1px;
-}
-
-.question::after {
-  content: "\25BC"; /* Down arrow */
-  position: absolute;
-  right: 15px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.question.expanded::after {
-  content: "\25B2"; /* Up arrow */
-}
-
-button {
-  padding: 10px 20px;
-  margin: 5px;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-  background-color: black;
-  color: white;
-  font-size: 16px;
-}
-
-button:hover {
-  background-color: #2c2a2a;
-}
-
-.btnOk{
-  color: white;
-  background-color: #776b5d;
-  padding: 5px;
-  border-radius: 5px;
-  width: 80px;
-  height: fit-content;
-  text-align: center;
-  margin-top: 25px;
 }
 
 a {
@@ -254,44 +211,18 @@ svg {
   top: 25%;
 }
 
-.menuP {
-  position: absolute;
-  text-align: center; /*prije je bilo left: 40%;*/
-  color: black;
-}
-
-.about {
-  display: flex;
-  flex-direction: column;
-}
-
-.AboutUs {
+.adminNaslov {
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
+  padding-top: 70px;
   font-size: 1.8rem;
   letter-spacing: 1px;
   color: #ebe3d5;
 }
 
-.aboutText {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 30px;
-  margin-bottom: 50px;
-  font-size: 1.2rem;
-  background-color: #ebe3d5;
-  border-radius: 5px;
-  padding: 20px;
+.menuP {
+  position: absolute;
+  text-align: center; /*prije je bilo left: 40%;*/
+  color: black;
 }
-
-.aboutText p {
-  font-size: 1.4rem;
-  color: #151515;
-}
-
