--- a/angularApp/src/app/home/home.component.css
+++ b/angularApp/src/app/home/home.component.css
@@ -5,7 +5,7 @@
     width: 100%;
     padding-top: 50px;
   }
-  
+
   .containercard {
     width: 90%;
     margin-left: 5%;
@@ -16,7 +16,7 @@
     position: relative;
     cursor: pointer;
   }
-  
+
   .itemcard {
     width: 90%;
     margin-left: 5%;
@@ -27,7 +27,7 @@
     position: relative;
     cursor: pointer;
   }
-  
+
   .cardtitle {
     z-index: 1;
     position: absolute;
@@ -39,7 +39,7 @@
     color: white;
     text-transform: uppercase;
   }
-  
+
   .itemtitle {
     z-index: 1;
     position: absolute;
@@ -51,7 +51,7 @@
     color: white;
     text-transform: uppercase;
   }
-  
+
   .cardsubtitle {
     z-index: 1;
     position: absolute;
@@ -61,7 +61,7 @@
     font-size: 1.3rem;
     color: white;
   }
-  
+
   .cardimg {
     width: 100%;
     height: 100%;
@@ -69,25 +69,25 @@
     opacity: 0.5;
     border-radius: 5px;
   }
-  
+
   .itemimg {
     object-fit: cover;
     opacity: 0.5;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
   }
-  
+
   .iteminfo {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 75px;
   }
-  
+
   .locationinfo {
     display: flex;
   }
-  
+
   /*--------------------------------- FILTRIRANJE  -----------------------------------*/
   .filtriranje {
     display: flex;
@@ -97,7 +97,7 @@
     height: 40px;
     margin-top: 20px;
   }
-  
+
   .comboboxGrad {
     z-index: 100;
     margin-left: auto;
@@ -105,17 +105,17 @@
     width: 90%;
     margin-top: 20px;
   }
-  
+
   details {
     position: relative;
     width: 100%;
     margin-right: 1rem;
   }
-  
+
   details[open] {
     z-index: 1;
   }
-  
+
   summary {
     padding: 0.6rem;
     cursor: pointer;
@@ -123,11 +123,11 @@
     background-color: #b0a695;
     list-style: none;
   }
-  
+
   summary::-webkit-details-marker {
     display: none;
   }
-  
+
   details[open] summary:before {
     content: "";
     display: block;
@@ -138,7 +138,7 @@
     top: 0;
     left: 0;
   }
-  
+
   summary:after {
     content: "";
     float: right;
@@ -151,15 +151,15 @@
     transform-origin: center center;
     transition: transform ease-in-out 100ms;
   }
-  
+
   summary:focus {
     outline: none;
   }
-  
+
   details[open] summary:after {
     transform: rotate(-45deg) translate(0%, 0%);
   }
-  
+
   ul {
     width: 100%;
     background: #b0a695;
@@ -173,54 +173,54 @@
     max-height: 200px;
     overflow-y: auto;
   }
-  
+
   li {
     margin: 0;
     padding: 0.6rem 0;
     border-bottom: 1px solid #ccc;
     list-style: none;
   }
-  
+
   li:first-child {
     padding-top: 0;
   }
-  
+
   li:last-child {
     padding-bottom: 0;
     border-bottom: none;
   }
-  
+
   /* FAKE SELECT */
-  
+
   summary.radios {
     counter-reset: radios;
   }
-  
+
   summary.radios:before {
     content: var(--selection);
   }
-  
+
   input[type="radio"] {
     counter-increment: radios;
     appearance: none;
     display: none;
   }
-  
+
   input[type="radio"]:checked {
     display: inline;
     --display: block;
   }
-  
+
   input[type="radio"]:after {
     content: attr(title);
     display: inline;
     font-size: 0.9rem;
   }
-  
+
   ul.list {
     counter-reset: labels;
   }
-  
+
   label {
     width: 100%;
     display: flex;
@@ -228,7 +228,7 @@
     justify-content: space-between;
     z-index: 100;
   }
-  
+
   label span {
     --display: none;
     display: var(--display);
@@ -237,7 +237,7 @@
     border: 1px solid #727272;
     border-radius: 3px;
   }
-  
+
   #inp {
     background: #b0a695;
     height: 40px;
@@ -247,19 +247,19 @@
     margin-top: 20px;
     border: none;
   }
-  
+
   textarea:focus,
   input:focus {
     outline: none;
   }
-  
+
   .search {
     position: relative;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
   }
-  
+
   .search button {
     height: 50%;
     right: 0;
@@ -270,11 +270,11 @@
     cursor: pointer;
     right: 15px;
   }
-  
+
   ::placeholder {
     color: white;
   }
-  
+
   .srcad {
     z-index: 1;
     position: absolute;
@@ -282,4 +282,20 @@
     top: 60%;
     font-size: 1.5rem;
   }
-  
+
+  .buttonEdit{
+    position: absolute;
+    z-index: 1000;
+    top: 20px;
+    left: 20px;
+  }
+
+.btnOk{
+  color: white;
+  background-color: #776b5d;
+  padding: 5px;
+  border-radius: 5px;
+  width: 80px;
+  height: fit-content;
+  text-align: center;
+}
