--- a/angularApp/src/app/kategorija/kategorija.component.html
+++ b/angularApp/src/app/kategorija/kategorija.component.html
@@ -21,7 +21,7 @@
                 <path
                     d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
             </svg>
-            <svg *ngIf="loginInfo().isLogiran==true" (click)="getListaFavorit()" #listaFavorit xmlns="http://www.w3.org/2000/svg" id="listaFavorit" style="cursor: pointer;" width="25" height="25"
+            <svg *ngIf="loginInfo().isLogiran==true && loginInfo().autentifikacijaToken?.korisnickiNalog?.isKorisnik" (click)="getListaFavorit()" #listaFavorit xmlns="http://www.w3.org/2000/svg" id="listaFavorit" style="cursor: pointer;" width="25" height="25"
                  class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
                 <path
                     d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1" />
@@ -33,7 +33,7 @@
     </select>
 <div class="container">
     <div class="itemcard" *ngFor="let usluzniObjekt of filtriranaListaUsluzniObjekt" (click)="onUsluzniObjektClick(usluzniObjekt.usluzniObjektID)">
-        <p class="itemtitle">{{usluzniObjekt.nazivObjekta}}</p>
+      <p class="itemtitle">{{usluzniObjekt.nazivObjekta}}</p>
             <div class="itemimg" style="background-image: url({{usluzniObjekt.slika}})"></div>
         <div class="iteminfo">
             <div class="locationinfo">
