--- a/angularApp/src/app/pitanja-odgovori-lista/pitanja-odgovori-lista.component.css
+++ b/angularApp/src/app/pitanja-odgovori-lista/pitanja-odgovori-lista.component.css
@@ -28,21 +28,39 @@
   line-height: 12px;
 }
 
-.containerGlavnir {
+.pitanjaOdgovoriContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  margin: 10px 0;
+}
+
+.containerGlavni {
+  width: 100%;
+  margin: 5px 0;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .question {
-  margin-top: 1px;
+  width: 100%;
   padding: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
   background-color: black;
   cursor: pointer;
   font-weight: bold;
-  position: relative; /* Position relative to place the arrow */
+  position: relative;
+}
+
+.postaviPitanjeKontejnercic{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .answer {
