--- a/angularApp/src/app/pitanja-admin-lista/pitanja-admin-lista.component.css
+++ b/angularApp/src/app/pitanja-admin-lista/pitanja-admin-lista.component.css
@@ -49,19 +49,20 @@ th, td{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
   padding: 20px;
   border: 1px solid #ccc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
-  height: 500px;
+  height: 200px;
   width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #ebe3d5
 }
 
 .close-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
   background: none;
   border: none;
   font-size: 18px;
@@ -201,7 +202,6 @@ svg {
 }
 
 .close-btn {
-  font-size: 30px;
   cursor: pointer;
   color: white;
 }
@@ -290,4 +290,30 @@ svg {
   font-size: 1.4rem;
   color: #151515;
 }
+
+.blur-background {
+  filter: blur(5px);
+  transition: filter 0.3s ease;
+}
+
+body.modal-open {
+  overflow: hidden;
+}
+
+.blur-background {
+  filter: blur(5px);
+  transition: filter 0.3s ease;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+
 
