--- a/angularApp/src/app/pitanja-admin-lista/pitanja-admin-lista.component.css
+++ b/angularApp/src/app/pitanja-admin-lista/pitanja-admin-lista.component.css
@@ -315,5 +315,49 @@ body.modal-open {
   z-index: 999;
 }
 
+.accountsContainer {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+.comment {
+  background-color: #776b5d;
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
+.komentarOsobe {
+  margin-top: 10px;
+}
+
+.dugmic2 {
+  height: 30px;
+  width: 45%;
+  background-color: #ebe3d5;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 10px;
+  font-size: 15px;
+  color: red;
+  font-weight: bolder;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dugmici{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.boldirano{
+  color: black;
+}
+
 
 
