Add component for adding new category, add new email templates

--- a/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.html
+++ b/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.html
@@ -204,7 +204,7 @@
       <div class="comment">
         <h3 *ngIf="usluzniObjekt?.longitude !== 0 && usluzniObjekt?.latitude !== 0">Lokacija objekta na mapi</h3>
         <h3 *ngIf="usluzniObjekt?.longitude == 0 && usluzniObjekt?.latitude == 0">Menadžer nije unio lokaciju objekta na mapi</h3>
-        <google-map height="400px" width="100%" [center]="center" [zoom]="zoom" (mapClick)="onMapClick($event)" mapId="7e0b3d96efce35ea">
+        <google-map height="400px" width="100%" [center]="center" [zoom]="zoom" (mapClick)="onMapClick($event)" mapId="">
           <map-advanced-marker *ngIf="usluzniObjekt?.longitude !== 0 && usluzniObjekt?.latitude !== 0"
                                [position]="center"
                                [options]="markerOptions"
