--- a/angularApp/src/app/home/home.component.html
+++ b/angularApp/src/app/home/home.component.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
+  
 <div class="container">
+  <div class="containercard" *ngIf="loginInfo().isLogiran && loginInfo().autentifikacijaToken?.korisnickiNalog?.isAdministrator" (click)="novaKategorija()">
+    <p class="cardtitle" style="margin-top: -10px; cursor: pointer;">
+      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+      </svg>
+    </p>
+    <p class="cardsubtitle">Dodaj novu kategoriju</p>
+    <div class="cardimg" style="background-image: url()"></div>
+  </div>
   <div class="containercard" *ngFor="let kategorija of kategorijeLista" (click)="onCategoryClick(kategorija.kategorijaID)" style="position: relative;">
     <div *ngIf="loginInfo().isLogiran && loginInfo().autentifikacijaToken?.korisnickiNalog?.isAdministrator" style="position: absolute; top: 20px; right: 20px; z-index: 10;">
       <button class="btnOk" [routerLink]="['/editKategorija/' + kategorija.kategorijaID]">Edit</button>
@@ -21,11 +32,5 @@
   </div>
 </div>
 
-<input type="file" (change)="onFileUploadChange($event)">
-  <label style="color: white;">
-    Ime kategorije:
-  </label>
-  <input type="text" [(ngModel)]="imeKategorije">
-  <button style="width: 60px" (click)="onSubmit()">Submit</button>
 </body>
 </html>
