--- a/angularApp/src/app/historija-rezervacija/historija-rezervacija.component.css
+++ b/angularApp/src/app/historija-rezervacija/historija-rezervacija.component.css
@@ -228,3 +228,10 @@
   padding: 5px;
   font-size: 1.2rem;
 }
+
+.statusText{
+  color: #b0a695;
+  font-size: 1.5rem;
+  text-align: center;
+  margin-top: 50px;
+}
