--- a/angularApp/src/app/kategorija/kategorija.component.css
+++ b/angularApp/src/app/kategorija/kategorija.component.css
@@ -298,3 +298,9 @@
     font-size: 1.5rem;
   }
   
+  .statusText{
+    color: #b0a695;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 50px;
+  }
