--- a/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.css
+++ b/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.css
@@ -8,6 +8,16 @@
     color: #ebe3d5;
   }
 
+  .subtitleHotel {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    font-size: 1.3rem;
+    letter-spacing: 1px;
+    color: #ebe3d5;
+  }
+
   .titleIRatingHotel {
     text-align: center;
   }
