--- a/angularApp/src/app/upravljaj-banovanim-racunima/upravljaj-banovanim-racunima.component.html
+++ b/angularApp/src/app/upravljaj-banovanim-racunima/upravljaj-banovanim-racunima.component.html
@@ -11,6 +11,7 @@
 <body>
 <p class="adminNaslov">Suspendovani računi</p>
 <div class="accountsContainer">
+  <p *ngIf="nizBanovanihRacuna?.length===0" class="statusText">Trentuno nema suspendovanih korisničkih naloga</p>
   <div *ngFor="let racun of nizBanovanihRacuna" class="comment" style="padding-left: 20px; padding-right: 20px; padding-top: 10px">
     <div class="profilePicAndName">
       <img
