--- a/angularApp/src/app/neodgovorena-pitanja-lista/neodgovorena-pitanja-lista.component.css
+++ b/angularApp/src/app/neodgovorena-pitanja-lista/neodgovorena-pitanja-lista.component.css
@@ -295,3 +295,10 @@ svg {
   color: #151515;
 }
 
+.statusText{
+  color: #b0a695;
+  font-size: 1.5rem;
+  text-align: center;
+  margin-top: 50px;
+}
+
