--- a/angularApp/src/app/upravljaj-obrisanim-racunima/upravljaj-obrisanim-racunima.component.html
+++ b/angularApp/src/app/upravljaj-obrisanim-racunima/upravljaj-obrisanim-racunima.component.html
@@ -11,6 +11,7 @@
 <body>
 <p class="adminNaslov">Obrisani računi</p>
 <div class="accountsContainer">
+  <p *ngIf="nizObrisanihhRacuna?.length===0" class="statusText">Trentuno nema obrisanih korisničkih naloga</p>
   <div *ngFor="let racun of nizObrisanihhRacuna" class="comment" style="padding-left: 20px; padding-right: 20px; padding-top: 10px">
     <div class="profilePicAndName">
       <img
