--- a/angularApp/src/app/historija-rezervacija/historija-rezervacija.component.css
+++ b/angularApp/src/app/historija-rezervacija/historija-rezervacija.component.css
@@ -117,7 +117,7 @@
 
 .popup {
     height: 300px;
-    width: 600px;
+    width: 650px;
     background-color: #b0a695;
     border-radius: 20px;
     display: flex;
@@ -142,6 +142,7 @@
     text-align: center;
     font-size: 1.5rem;
     margin-bottom: 20px;
+    width: 80%;
   }
 
   .btnok {
@@ -211,27 +212,41 @@
 .move-in-row,
 .move-out-row {
   display: flex;
-  gap: 1rem;
+  justify-content: space-between;
+  width: 95%;
 }
 
 .date-select label
 {
   color: white;
-  margin-right: 5px;
+  width: 50%;
 }
 
 .date-select select {
-  background-color: #776b5d;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  padding: 5px;
-  font-size: 1.2rem;
-}
+    background-color: #776b5d;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    padding: 5px;
+    font-size: 1.2rem;
+    width: 65px;
+  }
+  
 
 .statusText{
   color: #b0a695;
   font-size: 1.5rem;
   text-align: center;
   margin-top: 50px;
+}
+
+.dates-container{
+  width: 95%;
+}
+
+.date-select
+{
+  display: flex;
+  justify-content: space-around;
+  width: 30%;
 }
