--- a/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.css
+++ b/angularApp/src/app/usluzni-objekt/usluzni-objekt.component.css
@@ -200,6 +200,8 @@
     text-align: center;
     padding: 10px;
     color: black;
+    display: flex;
+    flex-direction: column;
   }
 
   .cijenovnikTabela td, th
@@ -207,8 +209,25 @@
     color: black;
   }
 
-  .cijenovnikTabela thead th{
-    color: black;
+  .cijenovnikTabela thead{
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+  }
+
+  .cijenovnikTabela tbody{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .cijenovnikTabela tr{
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
   }
 
   .rezervacijaSmjestaja {
@@ -241,7 +260,7 @@
   }
 
   select {
-    margin-bottom: 10px;
+    margin: 10px;
     background-color: #776b5d;
     border: none;
     border-radius: 5px;
@@ -254,6 +273,7 @@
     color: white;
     padding: 5px;
     font-size: 1.2rem;
+    width: 75px;
   }
 
   .datumRez {
@@ -267,14 +287,9 @@
 .move-in-row,
 .move-out-row {
   display: flex;
-  gap: 1rem;
+  justify-content: space-between;
 }
 
-.date-select {
-  display: flex;
-  flex: 1;
-  width: 250px;
-}
 
   #datumRezP {
     width: 60%;
@@ -430,5 +445,20 @@
   {
     display: flex;
     flex-direction: row;
+    margin: 5px;
   }
 
+.godinaLabel{
+  display: inline-block;
+  width: 150px;
+}
+
+.checkboxClass{
+  width: 50px;
+  margin: 0;
+}
+
+.dates-container{
+  display: flex;
+  flex-direction: column;
+}
